# HDUGOBackend

./: .gitignore  CMakeLists.txt  main.cc
controllers/: User_HTTP.cc  User_HTTP.h
plugins/: Configurator.cc  Configurator.h  TaskManager.cc  TaskManager.h
services/: User_HTTP.cc  User_HTTP.h
utils/: HtmlParser.cc  HtmlParser.h  crypto.cc  crypto.h  http.cc  http.h  misc.cc  misc.h
